fix: cleanup repo and add generated headers for demo

--- a/jnihellostachka/.gitignore
+++ b/jnihellostachka/.gitignore
@@ -1,2 +1,8 @@
-!/build/generated/jni/includes/*.h
-/build
+build/*
+!build/generated/
+build/generated/*
+!build/generated/jni/
+build/generated/jni/*
+!build/generated/jni/includes/
+build/generated/jni/includes/*
+!build/generated/jni/includes/*.h
